--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Title</title>
+        <title>Portfolio</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Portfolio</h1>
+        <h1>WELCOME</h1>
+        <p></p>
     </body>
 </html>
