--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <nav>
+            <img src="https://static.miraheze.org/greatcharacterswiki/thumb/0/09/Goku.png/640px-Goku.png" width="210" height="210">
+        </nav>
         <h1>WELCOME</h1>
-        <p></p>
     </body>
 </html>
