--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     </head>
     <body>
         <nav>
+            <div class="top nav">
+                <div class="item item "></div>
+                <div class="item item "></div>
+                <div class="item item "></div>
+                <div class="item item "></div>
+            </div>
             <img src="https://static.miraheze.org/greatcharacterswiki/thumb/0/09/Goku.png/640px-Goku.png" width="210" height="210">
         </nav>
         <h1>WELCOME</h1>
