Added text within divs and updated CSS code

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <body>
         <nav>
             <div class="top nav">
-                <div class="item item "></div>
-                <div class="item item "></div>
-                <div class="item item "></div>
-                <div class="item item "></div>
+                <div class="item item-1">Home</div>
+                <div class="item item-2">About Me</div>
+                <div class="item item-3">Resume</div>
+                <div class="item item-4">Misc.</div>
             </div>
             <img src="https://static.miraheze.org/greatcharacterswiki/thumb/0/09/Goku.png/640px-Goku.png" width="210" height="210">
         </nav>
