--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
                 <div class="item item-3">Resume</div>
                 <div class="item item-4">Misc.</div>
             </div>
-            <img src="https://static.miraheze.org/greatcharacterswiki/thumb/0/09/Goku.png/640px-Goku.png" width="210" height="210">
         </nav>
-        <h1>WELCOME</h1>
+        <h1><center>WELCOME</center></h1>
     </body>
 </html>
