--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <nav>
             <div class="topnav">
-                <div class="item item-1">Home</div>
+                <div class="item item-1"><a href="http://localhost:63342/Portfolio/index.html?_ijt=bd54dm5ujvgqviu40325s245h3&_ij_reload=RELOAD_ON_SAVE">Home</a></div>
                 <div class="item item-2">About Me</div>
                 <div class="item item-3">Resume</div>
                 <div class="item item-4">Misc.</div>
