--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
                 <div class="item item-4">Misc.</div>
             </div>
         </nav>
-        <h1><center>WELCOME</center></h1>
+        <main>
+            <h1><center>WELCOME</center></h1>
+            <p>Hello my name is Ryan A. Ragmani. This site will like to introduce you to my portfolio.</p>
+        </main>
     </body>
 </html>
