Finished with the main and tweaked with the p tags

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <main>
             <h1><center>WELCOME</center></h1>
             <p>Hello my name is Ryan A. Ragmani. This site will like to introduce you to my portfolio.</p>
+            <p>A portfolio that introduces to who I am, what my strengths are, and my experiences.</p>
         </main>
     </body>
 </html>
