Added and finished 2nd page

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Portfolio</title>
         <link rel="stylesheet" href="style.css">
     </head>
-    <body>
+    <body style="background-color:black">
         <nav>
             <div class="topnav">
                 <div class="item item-1"><a href="http://localhost:63342/Portfolio/index.html?_ijt=bd54dm5ujvgqviu40325s245h3&_ij_reload=RELOAD_ON_SAVE">Home</a></div>
