--- a/About_Me.html
+++ b/About_Me.html
@@ -5,14 +5,18 @@
         <title>About Me</title>
         <link rel="stylesheet" href="style.css">
     </head>
-    <body>
-    <nav>
-        <div class="topnav">
-            <div class="item item-1"><a href="http://localhost:63342/Portfolio/index.html?_ijt=bd54dm5ujvgqviu40325s245h3&_ij_reload=RELOAD_ON_SAVE">Home</a></div>
-            <div class="item item-2"><a href="http://localhost:63342/Portfolio/About_Me.html?_ijt=22foda2661v4p6pdkrrq10kb0f&_ij_reload=RELOAD_ON_SAVE">About Me</a></div>
-            <div class="item item-3">Resume</div>
-            <div class="item item-4">Misc.</div>
-        </div>
-    </nav>
+    <body style="background-color:black">
+        <nav>
+            <div class="topnav">
+                <div class="item item-1"><a href="http://localhost:63342/Portfolio/index.html?_ijt=bd54dm5ujvgqviu40325s245h3&_ij_reload=RELOAD_ON_SAVE">Home</a></div>
+                <div class="item item-2"><a href="http://localhost:63342/Portfolio/About_Me.html?_ijt=22foda2661v4p6pdkrrq10kb0f&_ij_reload=RELOAD_ON_SAVE">About Me</a></div>
+                <div class="item item-3">Resume</div>
+                <div class="item item-4">Misc.</div>
+            </div>
+        </nav>
+        <h1><center>About Me</center></h1>
+        <p>I am simply a person that exists but a person with interests and personality.</p>
+        <p>My interests are coding, animation, robotics, gaming, etc. So far I am currently learning other coding languages like Python. I am also doing other things outside of coding like learning how to animate.</p>
+        <p>I am an energetic person and overall a fun person to be around. I enjoy a few pieces of media and games like Sonic, Mario, Mega Man, Jojo’s Bizarre Adventure, Roblox, a little bit of Minecraft, Dragon Ball, etc.</p>
     </body>
 </html>
