Fixed a little oopsie I made

--- a/Resume.html
+++ b/Resume.html
@@ -42,6 +42,7 @@
             <ul>
                 <li>Flare's Education Training (2022-Present)</li>
             </ul>
+            <div>Interests:</div>
             <ul>
                 <li>Video Game Programming</li>
                 <li>3D Animation</li>
