--- a/About_Me.html
+++ b/About_Me.html
@@ -13,7 +13,7 @@
                 <div class="item item-3"><a href="http://localhost:63342/Portfolio/Resume.html?_ijt=2s5u6bj77c110chksc4dacb363&_ij_reload=RELOAD_ON_SAVE">Resume</a></div>
                 <div class="item item-4">Misc.</div>
             </div>
-            <div class="verticalnav"
+            <div class="verticalnav"></div>
         </nav>
         <h1><center>About Me</center></h1>
         <p>I am simply a person that exists but a person with interests and personality.</p>
