Small mistake fixed, whoops. (again)

--- a/Blender_3D.html
+++ b/Blender_3D.html
@@ -13,7 +13,7 @@
                 <div class="item item-3"><a href="http://localhost:63342/Portfolio/Resume.html?_ijt=2s5u6bj77c110chksc4dacb363&_ij_reload=RELOAD_ON_SAVE">Resume</a></div>
                 <div class="item item-4">Misc.</div>
             </div>
-            <div class="verticalnav"
+            <div class="verticalnav"></div>
         </nav>
     </body>
 </html>
