--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
                 <div class="item item-3"><a href="http://localhost:63342/Portfolio/Resume.html?_ijt=2s5u6bj77c110chksc4dacb363&_ij_reload=RELOAD_ON_SAVE">Resume</a></div>
                 <div class="item item-4">Misc.</div>
             </div>
-            <div class="verticalnav"></div>
+            <div class="verticalnav">
                 <div class="item item-5">Blender 3D</div>
                 <div class="item item-6">I LOVE DRINKING SULFURIC ACID</div>
+            </div>
         </nav>
         <main>
             <h1><center>WELCOME</center></h1>
