--- a/index.html
+++ b/index.html
@@ -13,10 +13,16 @@
                 <div class="item item-3"><a href="http://localhost:63342/Portfolio/Resume.html?_ijt=2s5u6bj77c110chksc4dacb363&_ij_reload=RELOAD_ON_SAVE">Resume</a></div>
                 <div class="item item-4">Misc.</div>
             </div>
+            <!---
             <div class="verticalnav">
-                <div class="item item-5">Blender 3D</div>
-                <div class="item item-6">I LOVE DRINKING SULFURIC ACID</div>
+                <div class="item item-5"><center>Blender 3D</center></div>
+                <div class="item item-6"><center>Dragon Ball</center></div>
+                <div class="item item-7"><center>HTML</center></div>
+                <div class="item item-8"><center>Sonic</center></div>
+                <div class="item item-9"><center>Mega Man</center></div>
             </div>
+            I tried adding a misc something similar to my Figma so I decided to convert all of this into a comment command, I should be able to find a solution but I got some other things to focus on so I'll come back to this later.
+            --->
         </nav>
         <main>
             <h1><center>WELCOME</center></h1>
