What type of code was I writing yesterday??? Holy crap.

--- a/Resume.html
+++ b/Resume.html
@@ -16,7 +16,7 @@
             <div class="verticalnav"></div>
         </nav>
         <br>
-        <div class="item resume">
+        <main class="item resume">
             <div><center>Ryan Ragmani</center></div>
             <div><center>ryansimportantemail6@gmail.com</center></div>
             <div><center>(857) 205-4618</center></div>
@@ -54,6 +54,6 @@
             <ul>
                 <li>Madison Park</li>
             </ul>
-        </div>
+        </main>
     </body>
     </html>
