Finished the Blender 3D Page

--- a/Blender_3D.html
+++ b/Blender_3D.html
@@ -5,7 +5,7 @@
         <title>Blender 3D</title>
         <link rel="stylesheet" href="style.css">
     </head>
-    <body>
+    <body style="background-color:black">
         <nav>
             <div class="horizontalnav">
                 <div class="item item-1"><a href="http://localhost:63342/Portfolio/index.html?_ijt=bd54dm5ujvgqviu40325s245h3&_ij_reload=RELOAD_ON_SAVE">Home</a></div>
@@ -13,7 +13,12 @@
                 <div class="item item-3"><a href="http://localhost:63342/Portfolio/Resume.html?_ijt=2s5u6bj77c110chksc4dacb363&_ij_reload=RELOAD_ON_SAVE">Resume</a></div>
                 <div class="item item-4">Misc.</div>
             </div>
-            <div class="verticalnav"></div>
+            <main>
+                <p><a href="https://www.blender.org/">Blender</a> is a free open source 3D software originally made by Ton Roosendaal back in 1994 and operates in Windows, MacOS, and Linux. The software is used for modeling, animation, art, and at some point it was a game dev software before 2.8 released.</p>
+                <img src="https://cdna.artstation.com/p/assets/images/images/025/072/520/large/hoya-choe-joker-hex-04.jpg?1584515629" alt="Joker" width="500" height="426">
+                <p>Despite the many capabilities Blender can do it is not an industry standard software unlike Maya, 3D Studios Max, and Cinema 4D. Considering the fact that it is an old software and it’s steep learning curve for years Blender has implemented groundbreaking updates. Example, in 2.8 with the ability to use the grease pencil you can now do 2D animation while working with a 3D software.</p>
+                <img src="https://i.ytimg.com/vi/Jtp0vF3PlbE/maxresdefault.jpg" alt="Grease Pen" width="1000" height="563">
+            </main>
         </nav>
     </body>
 </html>
