Reworked the nav bar

--- a/Blender_3D.html
+++ b/Blender_3D.html
@@ -8,11 +8,13 @@
     <body style="background-color:black">
         <nav>
             <div class="horizontalnav">
-                <div class="item item-1"><a href="http://localhost:63342/Portfolio/index.html?_ijt=bd54dm5ujvgqviu40325s245h3&_ij_reload=RELOAD_ON_SAVE">Home</a></div>
-                <div class="item item-2"><a href="http://localhost:63342/Portfolio/About_Me.html?_ijt=22foda2661v4p6pdkrrq10kb0f&_ij_reload=RELOAD_ON_SAVE">About Me</a></div>
-                <div class="item item-3"><a href="http://localhost:63342/Portfolio/Resume.html?_ijt=2s5u6bj77c110chksc4dacb363&_ij_reload=RELOAD_ON_SAVE">Resume</a></div>
-                <div class="item item-4">Misc.</div>
+                <ul>
+                    <li><a href="http://localhost:63342/Portfolio/index.html?_ijt=bd54dm5ujvgqviu40325s245h3&_ij_reload=RELOAD_ON_SAVE">Home</a></li>
+                    <li class="item item-2"><a href="http://localhost:63342/Portfolio/About_Me.html?_ijt=22foda2661v4p6pdkrrq10kb0f&_ij_reload=RELOAD_ON_SAVE">About Me</a></li>
+                    <li class="item item-3"><a href="http://localhost:63342/Portfolio/Resume.html?_ijt=2s5u6bj77c110chksc4dacb363&_ij_reload=RELOAD_ON_SAVE">Resume</a></li>
+                </ul>
             </div>
+        </nav>
             <main>
                 <p><a href="https://www.blender.org/">Blender</a> is a free open source 3D software originally made by Ton Roosendaal back in 1994 and operates in Windows, MacOS, and Linux. The software is used for modeling, animation, art, and at some point it was a game dev software before 2.8 released.</p>
                 <img src="https://cdna.artstation.com/p/assets/images/images/025/072/520/large/hoya-choe-joker-hex-04.jpg?1584515629" alt="Joker" width="500" height="426">
