--- a/index.html
+++ b/index.html
@@ -8,21 +8,12 @@
     <body style="background-color:black">
         <nav>
             <div class="horizontalnav">
-                <div class="item item-1"><a href="http://localhost:63342/Portfolio/index.html?_ijt=bd54dm5ujvgqviu40325s245h3&_ij_reload=RELOAD_ON_SAVE">Home</a></div>
-                <div class="item item-2"><a href="http://localhost:63342/Portfolio/About_Me.html?_ijt=22foda2661v4p6pdkrrq10kb0f&_ij_reload=RELOAD_ON_SAVE">About Me</a></div>
-                <div class="item item-3"><a href="http://localhost:63342/Portfolio/Resume.html?_ijt=2s5u6bj77c110chksc4dacb363&_ij_reload=RELOAD_ON_SAVE">Resume</a></div>
-                <div class="item item-4">Misc.</div>
+                <ul>
+                    <li><a href="http://localhost:63342/Portfolio/index.html?_ijt=bd54dm5ujvgqviu40325s245h3&_ij_reload=RELOAD_ON_SAVE">Home</a></li>
+                    <li class="item item-2"><a href="http://localhost:63342/Portfolio/About_Me.html?_ijt=22foda2661v4p6pdkrrq10kb0f&_ij_reload=RELOAD_ON_SAVE">About Me</a></li>
+                    <li class="item item-3"><a href="http://localhost:63342/Portfolio/Resume.html?_ijt=2s5u6bj77c110chksc4dacb363&_ij_reload=RELOAD_ON_SAVE">Resume</a></li>
+                </ul>
             </div>
-            <!---
-            <div class="verticalnav">
-                <div class="item item-5"><center>Blender 3D</center></div>
-                <div class="item item-6"><center>Dragon Ball</center></div>
-                <div class="item item-7"><center>HTML</center></div>
-                <div class="item item-8"><center>Sonic</center></div>
-                <div class="item item-9"><center>Mega Man</center></div>
-            </div>
-            I tried adding a misc something similar to my Figma so I decided to convert all of this into a comment command, I should be able to find a solution but I got some other things to focus on so I'll come back to this later.
-            --->
         </nav>
         <main>
             <h1><center>WELCOME</center></h1>
