--- a/About_Me.html
+++ b/About_Me.html
@@ -8,12 +8,12 @@
     <body style="background-color:black">
         <nav>
             <div class="horizontalnav">
-                <div class="item item-1"><a href="http://localhost:63342/Portfolio/index.html?_ijt=bd54dm5ujvgqviu40325s245h3&_ij_reload=RELOAD_ON_SAVE">Home</a></div>
-                <div class="item item-2"><a href="http://localhost:63342/Portfolio/About_Me.html?_ijt=22foda2661v4p6pdkrrq10kb0f&_ij_reload=RELOAD_ON_SAVE">About Me</a></div>
-                <div class="item item-3"><a href="http://localhost:63342/Portfolio/Resume.html?_ijt=2s5u6bj77c110chksc4dacb363&_ij_reload=RELOAD_ON_SAVE">Resume</a></div>
-                <div class="item item-4">Misc.</div>
+                <ul>
+                    <li><a href="http://localhost:63342/Portfolio/index.html?_ijt=bd54dm5ujvgqviu40325s245h3&_ij_reload=RELOAD_ON_SAVE">Home</a></li>
+                    <li class="item item-2"><a href="http://localhost:63342/Portfolio/About_Me.html?_ijt=22foda2661v4p6pdkrrq10kb0f&_ij_reload=RELOAD_ON_SAVE">About Me</a></li>
+                    <li class="item item-3"><a href="http://localhost:63342/Portfolio/Resume.html?_ijt=2s5u6bj77c110chksc4dacb363&_ij_reload=RELOAD_ON_SAVE">Resume</a></li>
+                </ul>
             </div>
-            <div class="verticalnav"></div>
         </nav>
         <h1><center>About Me</center></h1>
         <p>I am simply a person that exists but a person with interests and personality.</p>
