Properly centered text

--- a/Resume.html
+++ b/Resume.html
@@ -17,9 +17,9 @@
         </nav>
         <br>
         <main class="item resume">
-            <div><center>Ryan Ragmani</center></div>
-            <div><center>ryansimportantemail6@gmail.com</center></div>
-            <div><center>(857) 205-4618</center></div>
+            <div class="center">Ryan Ragmani</div>
+            <div class="center">ryansimportantemail6@gmail.com</div>
+            <div class="center">(857) 205-4618</div>
             <br>
             <div>Summary:</div>
             <div>Grounded and solution oriented computer programmer with a wide variety of professional experiences. Motivated and passionate about self educating for the next generation of technology.</div>
