--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </div>
         </nav>
         <main>
-            <h1><center>WELCOME</center></h1>
+            <h1 class="center">WELCOME</h1>
             <p>Hello my name is Ryan A. Ragmani. This site will like to introduce you to my portfolio.</p>
             <p>A portfolio that introduces to who I am, what my strengths are, and my experiences.</p>
         </main>
