Properly centered text (About Me Edition cuz I forgot)

--- a/About_Me.html
+++ b/About_Me.html
@@ -15,7 +15,7 @@
                 </ul>
             </div>
         </nav>
-        <h1><center>About Me</center></h1>
+        <h1 class="center">About Me</h1>
         <p>I am simply a person that exists but a person with interests and personality.</p>
         <p>My interests are coding, animation, robotics, gaming, etc. So far I am currently learning other coding languages like Python. I am also doing other things outside of coding like learning how to animate.</p>
         <p>I am an energetic person and overall a fun person to be around. I enjoy a few pieces of media and games like Sonic, Mario, Mega Man, Jojo’s Bizarre Adventure, Roblox, a little bit of Minecraft, Dragon Ball, etc.</p>
