--- a/html.html
+++ b/html.html
@@ -9,9 +9,14 @@
         <nav>
             <div class="horizontalnav">
                 <ul>
-                    <li><a href="http://localhost:63342/Portfolio/index.html?_ijt=bd54dm5ujvgqviu40325s245h3&_ij_reload=RELOAD_ON_SAVE">Home</a></li>
-                    <li class="item item-2"><a href="http://localhost:63342/Portfolio/About_Me.html?_ijt=22foda2661v4p6pdkrrq10kb0f&_ij_reload=RELOAD_ON_SAVE">About Me</a></li>
-                    <li class="item item-3"><a href="http://localhost:63342/Portfolio/Resume.html?_ijt=2s5u6bj77c110chksc4dacb363&_ij_reload=RELOAD_ON_SAVE">Resume</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="About_Me.html">About Me</a></li>
+                    <li><a href="Resume.html">Resume</a></li>
+                    <li><a href="Blender_3D.html">Blender 3D</a></li>
+                    <li><a href="Dragon_Ball.html">Dragon Ball</a></li>
+                    <li><a href="html.html">HTML</a></li>
+                    <li><a href="Sonic.html">Sonic</a></li>
+                    <li><a href="Mega_Man.html">Mega Man</a></li>
                 </ul>
             </div>
         </nav>
