--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
         <main>
             <h1 class="center">WELCOME</h1>
             <p>Hello my name is Ryan A. Ragmani. This site will like to introduce you to my portfolio.</p>
-            <p>A portfolio that introduces to who I am, what my strengths are, and my experiences.</p>
+            <p>A portfolio that introduces to who I am, what my strengths are, and my experiences. This entire webpage will explain all of my growth, my own interests, and what my life is all about.</p>
+            <img src="https://preview.redd.it/nvh74kt55h071.jpg?auto=webp&s=8fc2878f597df721c25023ee2c540f390edeff70" alt="first degree murder" height="200" width="2000">
         </main>
     </body>
 </html>
