Page Tweaks + Footer

--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
         <main>
             <h1 class="center">WELCOME</h1>
             <p>Hello my name is Ryan A. Ragmani. This site will like to introduce you to my portfolio.</p>
+            <img src="https://static.miraheze.org/greatcharacterswiki/thumb/0/09/Goku.png/640px-Goku.png" alt="goku" height="300" width="2000">
             <p>A portfolio that introduces to who I am, what my strengths are, and my experiences. This entire webpage will explain all of my growth, my own interests, and what my life is all about.</p>
-            <img src="https://preview.redd.it/nvh74kt55h071.jpg?auto=webp&s=8fc2878f597df721c25023ee2c540f390edeff70" alt="first degree murder" height="200" width="2000">
+            <img src="https://preview.redd.it/nvh74kt55h071.jpg?auto=webp&s=8fc2878f597df721c25023ee2c540f390edeff70" alt="first degree murder" height="500" width="2000">
         </main>
         <footer>
             <p class="theend">&copy; Copyright Reserved</p>
