--- a/Blender_3D.html
+++ b/Blender_3D.html
@@ -26,5 +26,8 @@
             <p>Despite the many capabilities Blender can do it is not an industry standard software unlike Maya, 3D Studios Max, and Cinema 4D. Considering the fact that it is an old software and it’s steep learning curve for years Blender has implemented groundbreaking updates. Example, in 2.8 with the ability to use the grease pencil you can now do 2D animation while working with a 3D software.</p>
             <img src="https://i.ytimg.com/vi/Jtp0vF3PlbE/maxresdefault.jpg" alt="Grease Pen" width="1000" height="563">
         </main>
+        <footer>
+            <p class="theend">&copy; Copyright Reserved</p>
+        </footer>
     </body>
 </html>
