--- a/Dragon_Ball.html
+++ b/Dragon_Ball.html
@@ -26,5 +26,8 @@
             <p>The original anime was first premiered back in February 26, 1986 and has longed since then many series have been produced (Z, GT, Super, etc.) and standing as one of the 25 highest grossing franchises of all time earning around $24 billion along with video game adaptations, merchandise, manga, and movies.</p>
             <img src="https://m.media-amazon.com/images/M/MV5BY2I2MzI1ODYtMWRlOS00MzdhLWEyOWEtYWJhNmFiZTIxMGJhXkEyXkFqcGdeQXVyMTExNDQ2MTI@._V1_FMjpg_UX1000_.jpg" alt="Dragon Ball Super" width="500" height="750">
         </main>
+        <footer>
+            <p class="theend">&copy; Copyright Reserved</p>
+        </footer>
     </body>
 </html>
