--- a/Mega_Man.html
+++ b/Mega_Man.html
@@ -26,5 +26,8 @@
             <p>Main series has a roster of 11 games, the stand alone Game Boy series (Known in Japan as “Rockman World”), along with other games that continue with the main storyline Mega Man X, Mega Man Zero, Mega Man ZX, and Mega Man Legends. There are also other spin-offs like Mega Man Battle Network and Mega Man Star Force where they just focus on the fiction of the internet instead of robotics.</p>
             <img src="https://upload.wikimedia.org/wikipedia/en/7/7e/Mega_Man_11_Artwork.png" alt="Mega Man 11 Render">
         </main>
+        <footer>
+            <p class="theend">&copy; Copyright Reserved</p>
+        </footer>
     </body>
 </html>
