--- a/Resume.html
+++ b/Resume.html
@@ -61,5 +61,8 @@
                 <li>Madison Park</li>
             </ul>
         </main>
+        <footer>
+            <p class="theend">&copy; Copyright Reserved</p>
+        </footer>
     </body>
     </html>
