--- a/Sonic.html
+++ b/Sonic.html
@@ -27,5 +27,8 @@
             <img src="https://mario.wiki.gallery/images/thumb/b/ba/Sonic_SSBU.png/1200px-Sonic_SSBU.png" alt="Sonic SSB Render" width="500" height="500">
             <p>Despite with the occasional struggles of this franchise it is one of the bestselling game franchises grossing over $5 billion by 2014 and the genesis games being the representative of 90’s culture.</p>
         </main>
+        <footer>
+            <p class="theend">&copy; Copyright Reserved</p>
+        </footer>
     </body>
 </html>
