--- a/html.html
+++ b/html.html
@@ -26,5 +26,8 @@
             <p>With the knowledge of HTML and a bachelor degree you will be able to work in various of jobs with pretty good pay. Example, if you have pretty good experience with all 3 of those programming languages you can work as a web developer and web developers make an average of $90k per year.</p>
             <img src="https://miro.medium.com/v2/resize:fit:498/1*5gJzummAqpBDGATo0fjU6Q.jpeg" alt="HTML Code">
         </main>
+        <footer>
+            <p class="theend">&copy; Copyright Reserved</p>
+        </footer>
     </body>
     </html>
