--- a/Blender_3D.html
+++ b/Blender_3D.html
@@ -4,20 +4,47 @@
         <meta charset="UTF-8">
         <title>Blender 3D</title>
         <link rel="stylesheet" href="style.css">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     </head>
     <body style="background-color:black">
-        <nav>
-            <div class="horizontalnav">
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="About_Me.html">About Me</a></li>
-                    <li><a href="Resume.html">Resume</a></li>
-                    <li><a href="Blender_3D.html">Blender 3D</a></li>
-                    <li><a href="Dragon_Ball.html">Dragon Ball</a></li>
-                    <li><a href="html.html">HTML</a></li>
-                    <li><a href="Sonic.html">Sonic</a></li>
-                    <li><a href="Mega_Man.html">Mega Man</a></li>
-                </ul>
+        <nav class="navbar navbar-expand-md navbar-success">
+            <div class="container xxl">
+                <a href="index.html" class="navbar-brand">
+                    <span class="fw-bold text-secondary">
+                        Portfolio
+                    </span>
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-end align-center">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="About_Me.html">About Me</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="Resume.html">Resume</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="Blender_3D.html">Blender 3D</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="Dragon_Ball.html">Dragon Ball</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="html.html">HTML</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="Sonic.html">Sonic</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="Mega_Man.html">Mega Man</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </nav>
         <main>
@@ -29,5 +56,6 @@
         <footer>
             <p class="theend">&copy; Copyright Reserved</p>
         </footer>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     </body>
 </html>
